[gd_scene load_steps=4 format=2]

[ext_resource path="res://script_editor/script_editor.gd" type="Script" id=1]
[ext_resource path="res://fonts/hack_regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://script_editor/accents_helper.tscn" type="PackedScene" id=3]

[node name="ScriptEditor" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 150
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="."]
margin_right = 195.0
margin_bottom = 800.0
split_offset = 300

[node name="ScriptList" type="ItemList" parent="VSplitContainer"]
margin_right = 195.0
margin_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
margin_top = 312.0
margin_right = 195.0
margin_bottom = 800.0

[node name="Label" type="Label" parent="VSplitContainer/VBoxContainer"]
margin_right = 195.0
margin_bottom = 14.0
text = "Scenes"

[node name="SceneList" type="ItemList" parent="VSplitContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 195.0
margin_bottom = 488.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 207.0
margin_right = 1024.0
margin_bottom = 800.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 817.0
margin_bottom = 24.0

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 813.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="AccentsHelper" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 817.0
margin_right = 817.0
margin_bottom = 24.0
text_edit_path = NodePath("../../TextEditor")

[node name="TextEditor" type="TextEdit" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 817.0
margin_bottom = 800.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
show_line_numbers = true
smooth_scrolling = true
wrap_enabled = true
caret_blink = true
caret_blink_speed = 0.5
[connection signal="item_selected" from="VSplitContainer/ScriptList" to="." method="_on_ScriptList_item_selected"]
[connection signal="item_selected" from="VSplitContainer/VBoxContainer/SceneList" to="." method="_on_SceneList_item_selected"]
